# stock_research

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: settings.yaml  universe.yaml  weeklys.csv
scripts/: log_chains.bat
src/stock_research/: __init__.py  backtest.py  blackscholes.py  cache.py  cboe.py  chainlog.py  cli.py  config.py  data.py  deepdive.py  edgar.py  edgar_xbrl.py  expected_return.py  fred.py  fundamentals.py  generative.py  joint.py  longcall.py  metrics.py  panel.py  parity.py  riskscan.py  screener.py  simulate.py  valuemodel.py  valuescan.py
tests/: test_app.py  test_backtest.py  test_chainlog.py  test_config.py  test_deepdive.py  test_edgar.py  test_edgar_xbrl.py  test_expected_return.py  test_features.py  test_generative.py  test_joint.py  test_longcall.py  test_metrics.py  test_panel.py  test_parity.py  test_retry.py  test_simulate.py  test_universe.py  test_valuemodel.py  test_valuescan.py
