[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-research"
version = "0.1.0"
description = "OTM call-option sale statistics for ETFs and large-cap companies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
]

[project.scripts]
stock-research = "stock_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
