[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-research"
version = "0.1.0"
description = "OTM call-option sale statistics for ETFs and large-cap companies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "rich>=13.0",
]

[project.optional-dependencies]
# GPU acceleration for the Monte-Carlo simulator. Optional: simulate.py runs on
# NumPy (CPU) when torch/CUDA isn't present. Install a CUDA build of torch that
# matches your driver (see pytorch.org); the bare `pip install .[gpu]` pulls the
# default wheel which may be CPU-only.
gpu = ["torch>=2.1"]
# Web dashboard: `pip install -e ".[ui]"` then `streamlit run app.py`.
ui = ["streamlit>=1.30"]
# Cross-sectional value model (`train-value`): gradient-boosted trees.
value = ["lightgbm>=4.0", "scikit-learn>=1.3"]
# Local XBRL Postgres extraction (`extract-xbrl-fundamentals`): needs the DB
# populated by the EDGAR-pipeline-share notebooks.
xbrl = ["psycopg2-binary>=2.9"]

[project.scripts]
stock-research = "stock_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
